<resources>
    <string name="app_name">LoveRussianLanguage</string>
    <string name="welcome_text">Привет, \n как тебя зовут?</string>
    <string name="settings_text">Привет, \n я твой помощник.</string>
    <string name="settings_first_tittle">1. Ы и И после приставок</string>
    <string name="settings_first_main">после приставки на согласную вместо и пишем ы например: безынтересный. после приставок: сверх-, меж-, контр-, дез-, пишем и. например: межинститутский</string>
    <string name="settings_second_title">2. безударные гласные в корнях слов</string>
    <string name="settings_second_main">Найти корень в слове (например, болеет – корень "бол"). - Подобрать родственное слово с ударением на проблемную гласную (болеет – больно). - Особый случай – буква "ё", которая всегда находится в "сильной" (ударной) позиции. Это означает, что в словах одного корня в слабом положении будем писать "е". Например: вёсны – весна, звёзды – звезда, налёт – налетать.Когда безударная гласная в корне слова не поддаётся проверке указанным выше способом, следует обратиться к справочной литературе. Написание таких "трудных" случаев следует запомнить. Эти слова в русском языке не подчиняются общим правилам и поэтому называются словарными. А знание правильного написания одного такого речевого элемента позволяет правильно писать и все родственные конструкции. К примеру, возьмём слова вагон, диван, вазелин, винегрет, археолог, президент, экскаватор. В этих случаях проверочные основы не подобрать, но их написание можно запомнить. Что нам это дает? Мы будем знать написание всех их однокоренных слов и производных форм: вагон – вагонный, вагоновожатый; диван – диваны, диванный; вазелин – вазелиновый.</string>
    <string name="settings_third_title">3. безударные гласные в суффиксах</string>
    <string name="settings_third_main">написание букв на месте безударных гласных в суффиксах устанавливается путем проверки словами и формами с тем же суффиксом, в которых проверяемый гласный находится под ударением.

        Примеры суффиксов с проверяемыми гласными (в скобках даются проверочные слова).

        Суффиксы с буквой и:

        −и к: виновник, умник, ежегодник (стари́к, озорни́к, дождеви́к);
        −ни к: путник, дворник, коровник, ценник (грибни́к, цветни́к, ледни́к);
        −щи к: атомщик, мороженщик (обувщи́к, кладовщи́к);
        −и к (а): журналистика, лингвистика, космонавтика, педагогика (производные типа педагоги́ческий, лингвисти́ческий), автоматика, символика, конкретика (производные типа символи́ческий);
        −и ц (а): любимица, медведица (певи́ца, тигри́ца), кожица (води́ца);
        −и н (а): баранина (осетри́на, свини́на), трещина, царапина (морщи́на);
        −и нк (а): бисеринка (икри́нка), лукавинка (хитри́нка);
        −и шк (с уменьшительно пренебрежительным значением): платьишко, сараишко, шинелишка (ружьи́шко, доми́шко, вори́шка);
        −ни ча и −и ча: столярничать, оригинальничать (домовни́чать);
        −и рова: маскировать (шаржи́ровать).
        Буква −и является также суффиксом наречий, оканчивающихся на −ски, −цки, −ьи: братски, творчески, молодецки, по французски, по кошачьи (воровски́, по мужски́).

        Суффикс с буквой ы:

        −ы ш: подкидыш, найдёныш (малы́ш, крепы́ш).
        Суффиксы с буквой о:

        −о сть: смелость, радость (злость – единственное проверочное слово);
        −о т (ш): красота, пестрота, широта (формы мн. ч.: красо́ты, широ́ты);
        −о вич: Олегович (Петро́вич);
        −о к: подросток, набросок, обрубок (игро́к, движо́к);
        −о в: апельсиновый, береговой (сосно́вый, дубо́вый, холщо́вый);
        −о вск: дедовский, шекспировский (старико́вский, днепро́вский);
        −о ва: линовать, адресовать (лино́ванный, адресо́ванный, лино́вка, переадресо́вка).
        Примечание. О соотношении глагольных суффиксов −ова и −ыва см. § 61.
        Буква −о является также суффиксом наречий: смело, быстро, ежедневно (далеко́, хорошо́, свежо́), в том числе и с приставками в, за, на: влево, направо, на́сухо, на́черно, за́ново, за́просто (наголо́, заодно́).

        Примечание. После мягких парных согласных, шипящих, ц и j в таких суффиксах вместо о пишется буква е, напр.: свежесть, нищета, Игоревич, ящичек, ножевой, тюлевый, ситцевый, боевой, магниевый (от бой, магний), уралмашевский (от Уралмаш), далевский (от Даль), межевать, горевать, неуклюже, искренне. То же в словах, образованных от несклоняемых иноязычных имен и фамилий на −и, напр.: вердиевский, руставелиевский (от Верди, Руставели), Генриевич (отчество от имени Генри).
        Суффикс с буквой а:

        −а рь: пекарь, лекарь, пахарь (звона́рь, бунтарь́).
        Буква −а (−я) является суффиксом наречий с приставками до, из, с: до́сыта, до́синя, и́здавна, сле́ва, спра́ва, сно́ва (догола́, издалека́, сполна́), а также первых наречных элементов в составных прилагательных типа изжелта красный, иссиня чёрный, обозначающих оттенки цвета.

        Суффиксы с буквой е:

        −е ниj (в словах на −ение): упоря́дочение, крахма́ление (увеличе́ние, распределе́ние);
        −е ц: любимец, счастливец (храбре́ц, глупе́ц);
        −е ств (о): ничтожество, изящество, празднество, то́жество (устар. к тождество), вещество (р. мн. веще́ств, производные: веще́ственный, тоже́ственный);
        −е н (ый): жареный (варёный);
        −е нн (ый) (суффикс причастий): направленный (оскорблённый);
        −е йш: красивейший, интереснейший (нежне́йший, полне́йший);
        −е е (проверяется первая буква): красивее, интереснее (полне́е, сильне́е);
        −е р (суффикс числительных): четверо, пятеро (производные типа четвёрка, пятёрка);
        −е р в основах косвенных падежей и форм мн. ч. слов мать и дочь: матери, дочери (доче́рний).
        Буква −е является также суффиксом наречий с приставками в и на: вкратце, внове, вскоре, наготове (вполне́, вчерне́, наравне́).

        Буквы е и о (о возможна только после твердых согласных г, к, х) пишутся в суффиксе прилагательных и наречий −еньк /−оньк: ста́ренький, чи́стенький, сла́бенький, бы́стренько; лёгонький и лёгенький, пло́хонький и пло́хенький; проверка: наречия типа хороше́нько, лего́нько, тихо́нько. Так же (с буквами е и о
        соответственно после согласных ш и х) пишутся суффиксы −ёшеньк и −ёхоньк в прилагательных и наречиях типа белёшенький и белёхонький, полнёшенький и полнёхонький, радёшенек и радёхонек, точнёхонько, ранёхонько и ранёшенько.

        Суффиксы с непроверяемыми безударными гласными.

        Суффиксы с буквой и:

        −и к (о): плечико, колесико;
        −и ан (а): пушкиниана, лениниана;
        −и ад (а): олимпиада, универсиада;
        −и тет: суверенитет, генералитет;
        −и ат: комиссариат, секретариат, антиквариат;
        −и ан (е), −и тян (е): христиане, островитяне;
        −и альн: принципиальный, бронхиальный;
        −и анск: марсианский, кантианский;
        −и зова: нейтрализовать, авторизовать;
        −и зирова: экранизировать, стабилизировать;
        −ари ус: архивариус;
        −ои д: металлоид, эллипсоид;
        −ини чн (а) (в отчествах): Ильинична, Кузьминична.
        Суффикс с буквой ы:

        −оны ш (−ёны ш): зверёныш, гадёныш, ужоныш.
        Примечание. Буквой ы или и передается безударный гласный суффикса при письменной передаче неофициальных (разговорных) форм отчеств типа Степаныч, Олегыч, Андреич, Дмитрич.
        Суффиксы с буквой е:

        −е и −ее: крепче, шире, полнее;
        −е ник (−е нник): труженик, предшественник, соотечественник;
        −е ц (а): хитреца, наглеца (существительные жен. рода: с хитрецой, с наглецой);
        −е в (а): синева;
        −е мент: абонемент, аккомпанемент, ангажемент (однако в словах сортимент, ассортимент пишется и);
        −е ск: юношеский, супружеский, товарищеский;
        −е нн (ий): утренний, внутренний;
        −те ль: учитель, двигатель, проигрыватель;
        −те льств (о): ручательство, доказательство;
        −те льн: удовлетворительный, привлекательный, образовательный;
        −те льск: издевательский, наплевательский;
        −абе льн: комфортабельный, читабельный;
        −иче ск: эпизодический, героический;
        −че ск: краеведческий, учрежденческий.
        Суффиксы с буквой о:

        −о нер: милиционер, функционер;
        −о тн (я): трескотня, толкотня;
        −о щав: худощавый, сухощавый;
        −ато р (−ято р), −то р: вибратор, организатор, компилятор, новатор, конструктор;
        −о чн: ленточный, обмолоточный, сбыточный, передаточный, распивочный.
        Буква о (после мягких согласных, шипящих и ц – е) пишется в суффиксах:

        −о ват (−е ват): беловатый, синеватый, рыжеватый, мешковатый, молодцеватый;
        −о вит (−е вит): плодовитый, мастеровитый, глянцевитый.
        Суффиксы с буквой а:

        −а ну (со значением однократного резкого или внезапного действия): крутануть, садануть, толкануть, полосанутъ, психануть, газануть;
        −а тай: глашатай, ходатай.
        Примечание. Существительные с суффиксом −атай следует отличать от слов вожатый и провожатый, склоняющихся как прилагательные: в них суффикс −ат, а −ый – окончание.</string>
    <string name="lobby_well">Отлично, \n ты</string>

    <string-array name="words_rule_1">
        <item>подытожить 4</item>
        <item>безыскусственный 4</item>
        <item>безыдейный 4</item>
        <item>безынициативный 4</item>
        <item>безынтересный 4</item>
        <item>сымпровизировать 2 </item>
        <item>надындивидуальный 4</item>
        <item>предыстория 5</item>
        <item>розыск 4</item>
        <item>предыдущий 5</item>
        <item>возыметь 4</item>
        <item>сверхизысканный 6</item>
        <item>безымянный 4</item>
        <item>межирригационный 4</item>
        <item>разыскивать 4</item>
        <item>безысходность 4</item>
    </string-array>
    <!--ы/и-->

    <string-array name="words_rule_2">
        <item>заря 2</item>
        <item>росла 2</item>
        <item>росток 2</item>
        <item>ровнять 2</item>
        <item>морской 2</item>
        <item>говорить 2</item>
        <item>долина 2</item>
        <item>уронить 3</item>
        <item>помогать 4</item>
        <item>выгонять 4</item>
        <item>разговор 5</item>
        <item>кольцо 2</item>
        <item>поглощать 5</item>
        <item>новинка 2</item>
        <item>носатый 2</item>
        <item>полосатый 2</item>
        <item>горевать 2</item>
    </string-array>
    <!--о/а-->

    <string-array name="words_rule_3">
        <item>любимец 6</item>
        <item>овражек 6</item>
        <item>скважинка 6</item>
        <item>платьице 6</item>
        <item>проталинка 7</item>
        <item>счастливец 9</item>
        <item>интереснейший 9</item>
        <item>красивейший 7</item>
        <item>олимпиада 6</item>
        <item>суверенитет 8</item>
        <item>рассматривал 9</item>
    </string-array>
    <!--и/е-->
</resources>
