<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HelpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGreen"
    tools:context="com.example.loverussianlanguage.HelpActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="260sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="90dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_marginEnd="151dp"
            android:layout_marginStart="151dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/settings_text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="210sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_first_tittle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_first_main"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView7"
                style="@style/Text_in_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_second_title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView8"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_second_main" />

            <TextView
                android:id="@+id/textView9"
                style="@style/Text_in_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_third_title" />

            <TextView
                android:id="@+id/textView10"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_third_main" />
        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/btnBack"
            style="@style/Setting_Button"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="55dp"
            android:text="ДОМОЙ"
            android:textColor="@color/mainGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
